Version 0.9.31dev (???)
  - Patch 435403 from Franz Sedlmaier:
    When a user edits an event, save the existing status (accepted,
    rejected) of each user rather than resetting it back to
    pending.  Don't send users notifications unless the date/time changed.
  - Patch 435396 from Franz Sedlmaier for bug 435390:
    Notification for rejecting events was not working.  Don't send
    the notification to other users who rejected the event.
  - Patch 435387 from Franz Sedlmaier for bug 435386:
    Fix HTML errors in preferences page.  Fix error that caused
    Oracle to complain about NULL values.
  - Patch 435383 from Franz Sedlmaier for bug 435379:
    Notification for deleting events was not working.  Don't send
    the notification to the person deleting the event.
  - Patch 435367 from Franz Sedlmaier:
    Allow user to override warning about conflicting events and save
    event anyway.
  - Fixed bug 214280: sometimes events would display shifted one day to
    right on week view.
  - Fixed bug 212550: unable to display short month name for May in
    languages where short name and long name are different.
  - Fixed bug 215549: if calendar is read-only, don't show new image,
    and don't allow users to add events.
  - Fixed bug 214381: don't try and use translate() in http header
    for sending http authorization request if translations have not
    yet been loaded.
  - Don't allow user to change password if using http authorization.
  - Added back selectDate javascript function that was mistakenly
    removed from edit_entry.php.
Version 0.9.30 (08 Jun 01)
  - Generate a fatal error when MySQL returns an error instead of
    ignoring it.
  - Fixed bug 420352: when viewing a repeating event for a date other
    than its first date, it was always showing the first date.
  - Fixed bug 430290: non-admin users could not update their name
    or password.
  - Fixed bug 430347: displaying duplicates when using ODBC.