@@ -54,6 +54,12 @@ Oct: Oct
 Nov: Nov
 Dec: Dec
 
+1st: 1st
+2nd: 2nd
+3rd: 3rd
+4th: 4th
+5th: 5th
+
 Generate printer-friendly version: Generate printer-friendly version
 Printer Friendly: Printer Friendly
 Go: Go
