@@ -1,4 +1,6 @@
 Version 0.9.31dev (???)
+  - Patch 435431 from Franz Sedlmaier:
+    Display repeating event information on event view page.
   - Patch 435403 from Franz Sedlmaier:
     When a user edits an event, save the existing status (accepted,
     rejected) of each user rather than resetting it back to
